--- a/app/src/main/res/layout/drawer_nav.xml
+++ b/app/src/main/res/layout/drawer_nav.xml
@@ -9,20 +9,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="#D2C2E6"
+        android:background="@drawable/border_radius"
         android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/ic_launcher_background"
-            android:contentDescription="Logo" />
+            android:src="@drawable/patrick"
+            android:contentDescription="Logo"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome"
+            android:text="Welcome Pak Aji"
             android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold"
