--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,7 +26,8 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:scaleType="centerCrop"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/madiii"/>
 
         <TextView
             android:id="@+id/tvName1"
@@ -57,7 +58,9 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:scaleType="centerCrop"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginBottom="16dp"
+
+            android:src="@drawable/zakyyy"/>
 
         <TextView
             android:id="@+id/tvName2"
