--- a/app/src/main/res/layout/item_spain.xml
+++ b/app/src/main/res/layout/item_spain.xml
@@ -4,14 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:layout_margin="10dp"
+    android:background="@drawable/rounded_box">
 
     <ImageView
         android:id="@+id/imageViewLogo"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:scaleType="centerCrop"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_box"/>
 
     <TextView
         android:id="@+id/textViewTeamName"
