--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.PAS_genap_absen18_absen36" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="android:statusBarColor">#FFEB3B</item> <!-- kuning -->
+
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
